--- a/24/starbuzz/starbuzz.css
+++ b/24/starbuzz/starbuzz.css
@@ -68,4 +68,25 @@ a:visited {
   margin-left:          auto;
 	margin-right:         auto;
 }
+.sidebar {
+	position:  absolute;
+	top:          100px;
+	right:        200px;
+	width:        280px;
+}
+.ad {
+	position:        absolute;
+	top:                150px;
+	left:               100px;
+	width:              600px;
+	height:              80px;
+	background-color: #ccbb00;
+}
+.sidebar {
+	z-index: 100;
+}
+
+.ad {
+	z-index:  1;
+}
 
