--- a/25/starbuzz/starbuzz.css
+++ b/25/starbuzz/starbuzz.css
@@ -68,4 +68,9 @@ a:visited {
   margin-left:          auto;
 	margin-right:         auto;
 }
+.main {
+	position: relative;
+	top:           0px;
+	left:        200px;
+}
 
