--- a/27/starbuzz/starbuzz.css
+++ b/27/starbuzz/starbuzz.css
@@ -5,7 +5,7 @@ body {
   margin:           0px;
 }
 
-.header {
+header {
   background-color: #675c47;
   margin:           10px;
   height:           108px;
@@ -20,7 +20,7 @@ body {
   margin:           0px 10px 10px 10px;
 }
 
-.sidebar {
+sidebar {
   display: table-cell;
   vertical-align: top;
   background:       #efe5d0 url(images/background.gif) bottom right;
@@ -29,7 +29,7 @@ body {
   margin:           0px 10px 10px 10px;
 }
 
-.footer {
+footer {
   background-color: #675c47;
   color:            #efe5d0;
   text-align:       center;
@@ -60,14 +60,14 @@ a:visited {
   text-decoration:  none;
   border-bottom:    thin dotted #675c47;
 }
-div.tableContainer {
+tableContainer {
   display: table;
   border-spacing: 10px;
 }
-div.talbeRow {
+talbeRow {
   display: table-row;
 }
-.drinks {
+drinks {
   background-color: #efe5d0;
   padding: 15px;
   float: left;
@@ -75,7 +75,7 @@ div.talbeRow {
   margin-top: 10px;
   padding-bottom: 8px;
 }
-.award {
+award {
 	position: absolute;
 	top: 30px;
 	left: 45%;
